--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
 
         <activity android:name=".RegistrationActivity"></activity>
 
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".OnBoardingActivity"></activity>
 
-        <activity android:name=".OnBoardingActivity" android:exported="true">
+        <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
