--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".Categories"
+            android:name=".Category2"
             android:exported="false" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistrationActivity" />
