--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-        <activity
-            android:name=".Profile"
-            android:exported="false" />
-        <activity
-            android:name=".Categories"
-            android:exported="false" />
+        <activity android:name=".RegistrationActivity"/>
+        <activity android:name=".Profile"/>
+        <activity android:name=".Categories"/>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".RegistrationActivity" />
         <activity android:name=".OnBoardingActivity" />
+        <activity android:name=".MainActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ItemDetails"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
