Added the Adapter class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
         <activity android:name=".Categories"/>
         <activity android:name=".LoginActivity" />
         <activity android:name=".OnBoardingActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".ItemDetails" />
         <activity
-            android:name=".ItemDetails"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
