--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-        <activity android:name=".RegistrationActivity"/>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".Profile"/>
         <activity android:name=".Categories"/>
         <activity android:name=".LoginActivity" />
         <activity android:name=".OnBoardingActivity" />
         <activity android:name=".ItemDetails" />
         <activity
-            android:name=".MainActivity"
+            android:name=".RegistrationActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
